force-app/main/default/objects/MJ_Monthly_Report__c/MJ_Monthly_Report__c.object-meta.xml
<CustomObject>
    <label>MJ Monthly Report</label>
    <nameField>
        <label>MJ Monthly Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MJ Monthly Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>