force-app/main/default/objects/MJ_Monthly_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Account which this Monthly Report is Monthly Report is associated to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MJ Monthly Reports</relationshipLabel>
    <relationshipName>MJ_Monthly_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>