force-app/main/default/objects/MJ_Monthly_Report__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External Id to match records during upsert. This is a read-only field with the format: &lt;4 digit firmcode&gt;_&lt;Month_Year Field&gt;</inlineHelpText>
    <label>External Id</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>