force-app/main/default/objects/MJ_Monthly_Report__c/fields/Firmcode__c.field-meta.xml
<CustomField>
    <fullName>Firmcode__c</fullName>
    <inlineHelpText>The MJ FirmCode related to the Account this Monthly Report belongs to</inlineHelpText>
    <label>Firmcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>