force-app/main/default/objects/MJ_Monthly_Report__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month Year</label>
    <length>7</length>
    <type>Text</type>
</CustomField>