force-app/main/default/objects/MJ_Monthly_Report__c/fields/Monthly_Report_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report_Month_Date__c</fullName>
    <formula>IF( FIND(&quot;_&quot;,  Month_Year__c )=2, 
DATE(Value(Right(Month_Year__c , 4)), value(left(Month_Year__c ,1)), 1 ),
DATE(Value(Right(Month_Year__c , 4)), value(left(Month_Year__c ,2)), 1 )
)</formula>
    <inlineHelpText>This Formula returns the date - 01 - &lt;Monthly Report Month&gt; - &lt;Monthly Report Year&gt;</inlineHelpText>
    <label>Monthly Report Month Date</label>
    <type>Date</type>
</CustomField>