force-app/main/default/objects/MJ_Monthly_Report__c/fields/Percentage_of_Requests_Failed__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Requests_Failed__c</fullName>
    <formula>( Total_GET_Failures__c  +  Total_POST_Failures__c )/   Total_Requests__c</formula>
    <inlineHelpText>Formula: %age Total Failures out of Total Requests</inlineHelpText>
    <label>Percentage of Requests Failed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>