force-app/main/default/objects/MJ_Monthly_Report__c/fields/Total_Failures__c.field-meta.xml
<CustomField>
    <fullName>Total_Failures__c</fullName>
    <formula>Total_GET_Failures__c +  Total_POST_Failures__c</formula>
    <inlineHelpText>Formula: GET Failures count + POST Failures count</inlineHelpText>
    <label>Total Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>