force-app/main/default/objects/MJ_Monthly_Report__c/fields/Total_GET_Successes__c.field-meta.xml
<CustomField>
    <fullName>Total_GET_Successes__c</fullName>
    <inlineHelpText>Total Count of GET Successes</inlineHelpText>
    <label>GET Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>