force-app/main/default/objects/MJ_Monthly_Report__c/fields/Total_POST_Failures__c.field-meta.xml
<CustomField>
    <fullName>Total_POST_Failures__c</fullName>
    <inlineHelpText>Total Count of POST Failures</inlineHelpText>
    <label>POST Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>