force-app/main/default/objects/MJ_Monthly_Report__c/fields/Total_POST_Successes__c.field-meta.xml
<CustomField>
    <fullName>Total_POST_Successes__c</fullName>
    <inlineHelpText>Total Count of POST Successes</inlineHelpText>
    <label>POST Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>