force-app/main/default/objects/MJ_Monthly_Report__c/fields/Total_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_Requests__c</fullName>
    <inlineHelpText>Count of Total Requests made from this Firmcode on this Monthly Report</inlineHelpText>
    <label>Total Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>