force-app/main/default/objects/MJ_Monthly_Report__c/fields/Total_Successes__c.field-meta.xml
<CustomField>
    <fullName>Total_Successes__c</fullName>
    <formula>Total_GET_Successes__c + Total_POST_Successes__c</formula>
    <inlineHelpText>Formula: GET Successes count + POST Successes count</inlineHelpText>
    <label>Total Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>