force-app/main/default/objects/MJ_Monthly_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Firmcode__c</columns>
    <columns>Month_Year__c</columns>
    <columns>Monthly_Report_Month_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>