force-app/main/default/objects/MJ_Monthly_Report__c/listViews/ALL_Reports.listView-meta.xml
<ListView>
    <fullName>ALL_Reports</fullName>
    <columns>NAME</columns>
    <columns>Firmcode__c</columns>
    <columns>Month_Year__c</columns>
    <columns>Monthly_Report_Month_Date__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>ALL Reports</label>
</ListView>